assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* Global Styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: #231E24;
    font-family: 'IBM Plex Sans', sans-serif;
}

h1,
h2,
h3 {
    font-family: 'Bubblegum Sans', sans-serif;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: #421305;
}

.hidden-header {
    display: none;
}

/* Header */

header {
    background-color: #78CB54;
    color: #78CB54;
    width: 100vw;
    min-height: 50px;
    padding: 0px .5rem;
    position: fixed;
    z-index: 99;
    box-shadow: 0 2px 4px #421305;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header a {
    color: inherit;
}

#logo {
    color: #421305;
}

#main-menu {
    font-family: 'Bubblegum Sans', sans-serif;
    color: #421305;
}

#main-menu a {
    text-decoration: none;
}

#main-menu li {
    list-style-type: none;
    /* margin: 5px 0; */
    font-size: 150%;
}

.current {
    border-bottom: 2px solid #421305;
    border-radius: 3px;
}

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: #78CB54;
    right: 0;
    padding: 0 .5rem;
    box-shadow: 0 0 4px .2rem #421305;
    display: none;
    top: 100%;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 1.5rem;
}

/* Main */
main {
    /* Make main element take up any surplus space to push footer down */
    flex: 1 0 auto;
    /* Add margin at the top to prevent content from being covered by the header */
    margin-top: 50px;
    display: flex;
    flex-direction: column;
    padding: 0px .5rem;
}

#hero {
    height: 600px;
    width: 100%;
    background: url('../images/main-bg.webp') no-repeat center center/cover;
    position: relative;
}



/* Footer */
footer {
    background-color: #78CB54;
    width: 100%;
    padding: 0px .5rem;
    position: relative;
    z-index: 99;
    box-shadow: 0 -2px 4px #421305;
    display: block;
    justify-content: space-between;
    align-items: baseline;
}

#socials {
    padding: 5px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#socials i {
    font-size: 200%;
    color: #421305;
    padding: 15%;
}

/* Media query: large or landscape phones (576px and up) */
@media screen and (min-width: 576px) {
    #photos {
        column-count: 2;
        column-gap: 0;
    }
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #main-menu {
        display: flex;
    }

    #main-menu > li {
        padding-left: 1rem;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: 280%;
        line-height: 50px;
        margin: 0 0.5rem;
    }

    /* Main content */
    main {
        /* Push main content down to accommodate larger header */
        margin-top: 50px;
    }

    /* Hero */
    #cover-text {
        width: 300px;
        right: 50px;
    }

    /* Reasons section */
    #benefits-physical,
    #benefits-mental {
        display: flex;
        flex-direction: column;
        width: 100%;
    }

    #benefits-physical>div,
    #benefits-mental>div {
        width: 75%;
    }

    #benefits-mental>div {
        text-align: end;
        align-self: flex-end;
    }

    #photos {
        column-count: 3;
    }

    /* Signup page */

    #signup {
        background-position: center;
        position: relative;
    }

    #signup-form {
        position: absolute;
        max-width: 400px;
        top: 150px;
        left: 10%;
    }

    .text-input:hover {
        border-color: #f16c6b;
    }

    .join-button:hover {
        background-color: #fafafa;
        color: #454b1b;
    }
}

/* Media query: laptops and larger (992px and up) */
@media screen and (min-width: 992px) {
    #main-menu a:hover {
        background-color: #421305;
        color: #78CB54;
        border-radius: 2px;
        /* border-bottom: 4px solid #421305; */
    }

    #photos {
        column-count: 4;
    }
}

/* Media query: screens 1200px and up for reasons section */
@media screen and (min-width: 1200px) {
    #benefits {
        display: flex;
        flex-direction: row;
    }

    #benefits>div {
        flex: 1;
    }

    #benefits-image {
        order: 0;
    }

    #benefits-mental {
        order: 1;
    }

    #benefits-mental>div {
        align-self: flex-start;
    }

    #benefits-physical>div {
        align-self: flex-end;
    }
}

